gobmkida/g2/find_eye_dragons
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/find_eye_dragons/src/engine/optics.c:1130:8: error: use of undeclared identifier 'byte_A12ADF'
if ( ( byte_A12ADF[v9] == 3 || p_origin[171] != origin || *( ( _BYTE *)p_origin + 700)) 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/find_eye_dragons/src/obj/1/optics.o] Error 1
